# kerf

./: .env.dev.example  .env.example  .env.main.example  .env.z.example  .gitignore  CHANGELOG.md  CONTRACT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  conftest.py  decisions.md  docker-compose.yml  fly.dev.toml  fly.toml  fly.worker.toml  index.html  install.sh  kerf.example.toml  koyeb.worker.yaml  koyeb.yaml  package-lock.json  package.json  pyproject.toml  tasks.md  vite.config.js
.github/workflows/: e2e.yml  publish-sdk-go.yml  publish-sdk-py.yml  publish-sdk-rs.yml  release-artifacts.yml  release.yml
backend/: main.py
backend/llm_docs/: bim.md  bim_categories.md  buses.md  cam.md  curtain_wall.md  curve_ops.md  draft.md  element_types.md  family.md  feature_multi_transform.md  feature_rib.md  fem.md  graph.md  hier_schematic.md  import_3dm.md  inspection.md  length_tuning.md  mep.md  mesh.md  pad_overrides.md  railings.md  render.md  schedule.md  sheet.md  sheet_revisions.md  shove_router.md  stairs.md  subd.md  topo.md  via_stitching.md  view.md
backend/migrations/: 1746577500000_project_tags.sql  1746577600000_kind_equations.sql  1746578200000_kind_script.sql
backend/routes/: cloud.py
backend/storage/: git_storer.py
backend/tests/: conftest.py  test_auto_tess_worker.py  test_bim_categories.py  test_buses.py  test_cam_advanced.py  test_cam_step.py  test_curtain_wall.py  test_curve_ops.py  test_draft.py  test_element_types.py  test_erc.py  test_family.py  test_feature_helix.py  test_feature_multi_transform.py  test_feature_rib.py  test_git_storer.py  test_graph.py  test_hier_schematic.py  test_import_3dm.py  test_inspection.py  test_length_tuning.py  test_mep.py  test_mesh.py  test_pad_overrides.py  test_pcb_drc.py  test_project_layers.py  test_railings.py  test_render.py  test_schedule.py  test_sheet.py  test_sheet_revisions.py  test_shove_router.py  test_stairs.py  test_subd.py  test_surfacing.py  test_via_stitching.py  test_view.py
backend/tools/: __init__.py  bim_categories.py  buses.py  configurations.py  curtain_wall.py  curve_ops.py  draft.py  element_types.py  equations.py  family.py  feature_multi_transform.py  feature_rib.py  file_ops.py  graph.py  hier_schematic.py  import_3dm.py  inspection.py  layers.py  length_tuning.py  material.py  mep.py  mesh.py  object_ops.py  pad_overrides.py  project_layers.py  railings.py  render.py  revisions.py  scaffold.py  schedule.py  sheet.py  sheet_revisions.py  shove_router.py  stairs.py  subd.py  topo.py  validation.py  via_stitching.py  view.py
backend/workers/: auto_tess_worker.py  runner.py
deployment/: README.md  aws.md  azure-blob.md  azure.md  cloudrun.yaml  digitalocean.md  fly.md  gcp.md  gcs.md  koyeb.md  kubernetes.yaml  s3.md  spaces.md  tigris.md
docs/: TESTING.md  ac-load-flow.md  account-and-auth.md  aero-atmosphere.md  aero-fin-flutter.md  aero-vlm-wing.md  aerospace.md  afp-atl-paths.md  afr-feature-dag.md  aisc-member-check.md  api-reference.md  apparel-avatar.md  apparel-seam-allowance.md  architecture.md  armature-poser.md  ashby-material-selection.md  ashrae-8760-sim.md  ashrae-heat-load.md  atopile-vs-tscircuit-deep.md  auto-git-init.md  billing-and-credits.md  brep-to-2d-hlr.md  bsim4-model.md  cam-layered.md  capabilities.md  cfd-ale-fsi.md  cfd-combustion.md  cfd-compressible.md  cfd-conjugate-ht.md  cfd-lagrangian.md  cfd-marine.md  cfd-openfoam.md  cfd-rans.md  cfd-simple-solver.md  cfd-snappy-mesh.md  cfd-vof.md  cfd-wind-engineering.md  civil-horizontal-alignment.md  cloud-features.md  cloud-operator.md  (+175 more)
docs/architecture/: database.md  rate-limiting.md  runtime-state-audit.md  stack.md
docs/audits/: billing-holes-2026-05-24.md
docs/plans/: 5-axis-cam-ocl-audit.md  5-axis-cam.md  audit-remediation.md  freecad-tier-1-import.md  frontend-audit.md  geometry-kernel-roadmap.md  large-assembly.md  large-object-billing.md  large-object-gc.md  large-object-hydration.md  nurbs-phase-4-full.md  occt-phase4.md  persistent-face-naming.md  sketch-to-jscad.md  testing-breakdown.md
docs/setup/: github-gitlab-sync.md
examples/: kerf-sdk-example.py
kerf-cad-core/: pyproject.toml
kerf-cad-core/tests/: test_cad_core.py
kerf-cam/: pyproject.toml
kerf-cam/tests/: conftest.py  test_cam_advanced.py  test_cam_step.py
kerf-fem/: pyproject.toml
kerf-fem/tests/: conftest.py  test_fem_calculix_modal.py  test_fem_cantilever.py  test_fem_modal.py
kerf-mates/: pyproject.toml
kerf-mates/tests/: conftest.py  test_mates.py
kerf-tess/: pyproject.toml
kerf-tess/tests/: test_tess_plugin.py
kerf-topo/: pyproject.toml
kerf-topo/tests/: conftest.py  test_topo_phase2.py  test_topo_polish.py
landing/: index.html
public/: ROADMAP.md  compare-manifest.json  docs-manifest.json  manifest.webmanifest  planegcs.wasm  roadmap-manifest.json  robots.txt  sitemap.xml  sw.js
public/compare/: 3shape.md  _schema.md  adams.md  allegro.md  altium.md  ansys-mechanical.md  archicad.md  artioscad.md  autocad.md  aveva-e3d.md  blender.md  cadence-spectre.md  calculix.md  carrier-hap.md  catia.md  cimatron.md  civil3d.md  clo3d.md  comsol.md  creo.md  eagle.md  easyeda.md  esprit.md  fibersim.md  freecad.md  fusion.md  gmat.md  hspice.md  ies-ve.md  inventor.md  kicad.md  ltspice.md  marvelous-designer.md  mastercam.md  matrixgold.md  max3ds.md  maxsurf.md  mozaik.md  multisim.md  (+19 more)
pyworker/: calculix_utils.py  fenicsx_utils.py  main.py
scripts/: README.md  _fix_notes.py  _flip_status.py  audit_llm_docs.py  bench_large_assembly.mjs  build-compare-manifest.mjs  build-docs-manifest.mjs  build-docs-manifest.test.mjs  build-icons.mjs  build-roadmap-manifest.mjs  bump-version.sh  bundled-setup.sh  deploy-fly.sh  deploy-koyeb.sh  dev-cloud.sh  dev-install.sh  dev.sh  e2e_chat_probe.py  gen-compare-md.py  gen_sqlite_migrations.py  generate_freecad_fixtures.py  init-config.mjs  install.sh  loop_dev.sh  loop_main.sh  perf_assembly.py  probe_ocl_5axis.py  seed-dev.sh  seed_dev_data.py  test_all.sh  test_seed_data.py  validate-roadmap-paths.py
src/: App.jsx  index.css  main.jsx
(+1077 files in other folders)
