[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# kerf — meta-package that installs a named "persona" bundle of plugins.
#
# Cloud-deploy story
# ------------------
# Each pod type selects the minimal set of plugins it needs:
#
#   api-only      stateless API gateway + chat (no heavy compute)
#   mech          full mechanical CAD stack (CAD, FEM, CAM, topology, mates)
#   electronics   EDA / PCB / SPICE stack
#   bim           building information modelling stack
#   full          everything (monolith / development)
#   compute-only  heavy compute workers only (no auth/API; behind internal LB)
#
# Install example:
#   pip install -e .[mech]
# ---------------------------------------------------------------------------

[project]
name = "kerf"
version = "0.1.0"
description = "Chat-driven CAD/EDA/BIM platform — meta package"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
# kerf-cli is the front-door: `pip install kerf` puts `kerf` on PATH.
dependencies = ["kerf-cli>=0.1.0"]

[project.optional-dependencies]

# `pip install 'kerf[server]'` — self-host install: CLI + full runtime stack.
# Delegates to kerf-cli[server] so the dep list is defined in one place.
server = [
    "kerf-cli[server]>=0.1.0",
]

api-only = [
    "kerf-core",
    "kerf-auth",
    "kerf-api",
    "kerf-chat",
    "kerf-v1",
]

mech = [
    "kerf-core",
    "kerf-auth",
    "kerf-api",
    "kerf-chat",
    "kerf-cad-core",
    "kerf-tess",
    "kerf-fem",
    "kerf-cam",
    "kerf-topo",
    "kerf-mates",
]

electronics = [
    "kerf-core",
    "kerf-auth",
    "kerf-api",
    "kerf-chat",
    "kerf-electronics",
]

bim = [
    "kerf-core",
    "kerf-auth",
    "kerf-api",
    "kerf-chat",
    "kerf-bim",
]

full = [
    "kerf-core",
    "kerf-auth",
    "kerf-api",
    "kerf-chat",
    "kerf-v1",
    "kerf-billing",
    "kerf-cloud",
    "kerf-pricing",
    "kerf-cad-core",
    "kerf-tess",
    "kerf-fem",
    "kerf-cam",
    "kerf-topo",
    "kerf-mates",
    "kerf-electronics",
    "kerf-bim",
    "kerf-imports",
    "kerf-render",
    "kerf-workers",
]

compute-only = [
    "kerf-core",
    "kerf-cad-core",
    "kerf-tess",
    "kerf-fem",
    "kerf-cam",
    "kerf-topo",
    "kerf-mates",
    "kerf-electronics",
    "kerf-bim",
    "kerf-imports",
    "kerf-render",
    "kerf-workers",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
# Root is a deps-only meta-package (real code lives in packages/*); ship an
# empty wheel. Newer hatchling rejects `packages = []`; bypass-selection is
# the documented way to allow a sourceless project.
bypass-selection = true

[tool.uv.workspace]
members = [
    "packages/kerf-cli",
    "packages/kerf-core",
    "packages/kerf-sdk",
    "packages/kerf-auth",
    "packages/kerf-api",
    "packages/kerf-chat",
    "packages/kerf-v1",
    "packages/kerf-billing",
    "packages/kerf-cloud",
    "packages/kerf-pricing",
    "packages/kerf-cad-core",
    "packages/kerf-tess",
    "packages/kerf-fem",
    "packages/kerf-cam",
    "packages/kerf-topo",
    "packages/kerf-mates",
    "packages/kerf-bim",
    "packages/kerf-electronics",
    "packages/kerf-imports",
    "packages/kerf-render",
    "packages/kerf-workers",
    "packages/kerf-parts",
    "packages/kerf-partsgen",
]

[tool.uv.sources]
kerf-cli = { workspace = true }
kerf-core = { workspace = true }
kerf-sdk = { workspace = true }
kerf-auth = { workspace = true }
kerf-api = { workspace = true }
kerf-chat = { workspace = true }
kerf-v1 = { workspace = true }
kerf-billing = { workspace = true }
kerf-cloud = { workspace = true }
kerf-pricing = { workspace = true }
kerf-cad-core = { workspace = true }
kerf-tess = { workspace = true }
kerf-fem = { workspace = true }
kerf-cam = { workspace = true }
kerf-topo = { workspace = true }
kerf-mates = { workspace = true }
kerf-bim = { workspace = true }
kerf-electronics = { workspace = true }
kerf-imports = { workspace = true }
kerf-render = { workspace = true }
kerf-workers = { workspace = true }
kerf-parts = { workspace = true }
kerf-partsgen = { workspace = true }

[tool.pytest.ini_options]
# Auto-discover tests from every plugin package and from the legacy backend/
# tree (which still hosts shared tools/ / workers/ / utils/ used by plugins
# until the next migration pass).
testpaths = [
    "packages/kerf-cli/tests",
    "packages/kerf-core/tests",
    "packages/kerf-auth/tests",
    "packages/kerf-api/tests",
    "packages/kerf-chat/tests",
    "packages/kerf-v1/tests",
    "packages/kerf-billing/tests",
    "packages/kerf-cloud/tests",
    "packages/kerf-pricing/tests",
    "packages/kerf-cad-core/tests",
    "packages/kerf-tess/tests",
    "packages/kerf-fem/tests",
    "packages/kerf-cam/tests",
    "packages/kerf-topo/tests",
    "packages/kerf-mates/tests",
    "packages/kerf-bim/tests",
    "packages/kerf-electronics/tests",
    "packages/kerf-imports/tests",
    "packages/kerf-render/tests",
    "packages/kerf-workers/tests",
    "packages/kerf-parts/tests",
    "packages/kerf-partsgen/tests",
    "tests/perf",
]
asyncio_mode = "auto"
# importlib mode lets multiple plugin tests/ dirs coexist without conflicting
# package paths.
# Ignore tests for known-broken untracked straggler modules (sysml1d, explicit,
# si_refvalues, tracecurrent_refvalues). They are partial implementations from
# interrupted prior work; the test files remain in the working tree but the
# modules need a focused hardening pass. Drop the corresponding --ignore line
# once each module turns its suite green.
addopts = "--import-mode=importlib"
