[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# kerf — meta-package that installs a named "persona" bundle of plugins.
#
# Cloud-deploy story
# ------------------
# Each pod type selects the minimal set of plugins it needs:
#
#   api-only      stateless API gateway + chat (no heavy compute)
#   mech          full mechanical CAD stack (CAD, FEM, CAM, topology, mates)
#   electronics   EDA / PCB / SPICE stack
#   bim           building information modelling stack
#   full          everything (monolith / development)
#   compute-only  heavy compute workers only (no auth/API; behind internal LB)
#
# Install example:
#   pip install -e .[mech]
# ---------------------------------------------------------------------------

[project]
name = "kerf"
version = "0.1.0"
description = "Chat-driven CAD/EDA/BIM platform — meta package"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
# kerf-cli is the front-door: `pip install kerf` puts `kerf` on PATH.
dependencies = ["kerf-cli>=0.1.0"]

[project.optional-dependencies]

# `pip install 'kerf[server]'` — self-host install: CLI + full runtime stack.
# Delegates to kerf-cli[server] so the dep list is defined in one place.
server = [
    "kerf-cli[server]>=0.1.0",
]

api-only = [
    "kerf-core",
    "kerf-auth",
    "kerf-api",
    "kerf-chat",
    "kerf-v1",
    "kerf-pub",
]

mech = [
    "kerf-core",
    "kerf-auth",
    "kerf-api",
    "kerf-chat",
    "kerf-cad-core",
    "kerf-tess",
    "kerf-fem",
    "kerf-cam",
    "kerf-topo",
    "kerf-mates",
]

electronics = [
    "kerf-core",
    "kerf-auth",
    "kerf-api",
    "kerf-chat",
    "kerf-electronics",
]

bim = [
    "kerf-core",
    "kerf-auth",
    "kerf-api",
    "kerf-chat",
    "kerf-bim",
]

full = [
    "kerf-core",
    "kerf-auth",
    "kerf-api",
    "kerf-chat",
    "kerf-v1",
    "kerf-pub",
    "kerf-billing",
    "kerf-cloud",
    "kerf-pricing",
    "kerf-cad-core",
    "kerf-tess",
    "kerf-fem",
    "kerf-cam",
    "kerf-topo",
    "kerf-mates",
    "kerf-electronics",
    "kerf-bim",
    "kerf-imports",
    "kerf-render",
    "kerf-workers",
    "kerf-1dsim",
    "kerf-aero",
    "kerf-apparel",
    "kerf-cfd",
    "kerf-civil",
    "kerf-composites",
    "kerf-dental",
    "kerf-energy",
    "kerf-firmware",
    "kerf-gdnt",
    "kerf-horology",
    "kerf-hvac",
    "kerf-interior",
    "kerf-landscape",
    "kerf-lca",
    "kerf-manufacturing",
    "kerf-marine",
    "kerf-microfluidics",
    "kerf-mold",
    "kerf-motion",
    "kerf-optics",
    "kerf-packaging",
    "kerf-piping",
    "kerf-plc",
    "kerf-rules",
    "kerf-silicon",
    "kerf-slicing",
    "kerf-structural",
    "kerf-systems",
    "kerf-textiles",
    "kerf-wiring",
    "kerf-woodworking",
    "kerf-plm",
]

compute-only = [
    "kerf-core",
    "kerf-cad-core",
    "kerf-tess",
    "kerf-fem",
    "kerf-cam",
    "kerf-topo",
    "kerf-mates",
    "kerf-electronics",
    "kerf-bim",
    "kerf-imports",
    "kerf-render",
    "kerf-workers",
    "kerf-composites",
    "kerf-dental",
    "kerf-manufacturing",
    "kerf-marine",
    "kerf-optics",
    "kerf-piping",
    "kerf-plm",
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
# Root is a deps-only meta-package (real code lives in packages/*); ship an
# empty wheel. Newer hatchling rejects `packages = []`; bypass-selection is
# the documented way to allow a sourceless project.
bypass-selection = true

[tool.uv.workspace]
members = [
    "packages/kerf-1dsim",
    "packages/kerf-aero",
    "packages/kerf-api",
    "packages/kerf-apparel",
    "packages/kerf-auth",
    "packages/kerf-billing",
    "packages/kerf-bim",
    "packages/kerf-cad-core",
    "packages/kerf-cam",
    "packages/kerf-cfd",
    "packages/kerf-chat",
    "packages/kerf-civil",
    "packages/kerf-cli",
    "packages/kerf-cloud",
    "packages/kerf-composites",
    "packages/kerf-core",
    "packages/kerf-dental",
    "packages/kerf-electronics",
    "packages/kerf-energy",
    "packages/kerf-fem",
    "packages/kerf-firmware",
    "packages/kerf-gdnt",
    "packages/kerf-horology",
    "packages/kerf-hvac",
    "packages/kerf-imports",
    "packages/kerf-interior",
    "packages/kerf-landscape",
    "packages/kerf-lca",
    "packages/kerf-manufacturing",
    "packages/kerf-marine",
    "packages/kerf-mates",
    "packages/kerf-microfluidics",
    "packages/kerf-mold",
    "packages/kerf-motion",
    "packages/kerf-optics",
    "packages/kerf-packaging",
    "packages/kerf-parts",
    "packages/kerf-partsgen",
    "packages/kerf-piping",
    "packages/kerf-plc",
    "packages/kerf-pricing",
    "packages/kerf-render",
    "packages/kerf-rules",
    "packages/kerf-sdk",
    "packages/kerf-silicon",
    "packages/kerf-slicing",
    "packages/kerf-structural",
    "packages/kerf-systems",
    "packages/kerf-tess",
    "packages/kerf-textiles",
    "packages/kerf-topo",
    "packages/kerf-v1",
    "packages/kerf-wiring",
    "packages/kerf-woodworking",
    "packages/kerf-worker",
    "packages/kerf-workers",
    "packages/kerf-plm",
]

[tool.uv.sources]
kerf-1dsim = { workspace = true }
kerf-aero = { workspace = true }
kerf-api = { workspace = true }
kerf-apparel = { workspace = true }
kerf-auth = { workspace = true }
kerf-billing = { workspace = true }
kerf-bim = { workspace = true }
kerf-cad-core = { workspace = true }
kerf-cam = { workspace = true }
kerf-cfd = { workspace = true }
kerf-chat = { workspace = true }
kerf-civil = { workspace = true }
kerf-cli = { workspace = true }
kerf-cloud = { workspace = true }
kerf-composites = { workspace = true }
kerf-core = { workspace = true }
kerf-dental = { workspace = true }
kerf-electronics = { workspace = true }
kerf-energy = { workspace = true }
kerf-fem = { workspace = true }
kerf-firmware = { workspace = true }
kerf-gdnt = { workspace = true }
kerf-horology = { workspace = true }
kerf-hvac = { workspace = true }
kerf-imports = { workspace = true }
kerf-interior = { workspace = true }
kerf-landscape = { workspace = true }
kerf-lca = { workspace = true }
kerf-manufacturing = { workspace = true }
kerf-marine = { workspace = true }
kerf-mates = { workspace = true }
kerf-microfluidics = { workspace = true }
kerf-mold = { workspace = true }
kerf-motion = { workspace = true }
kerf-optics = { workspace = true }
kerf-packaging = { workspace = true }
kerf-parts = { workspace = true }
kerf-partsgen = { workspace = true }
kerf-piping = { workspace = true }
kerf-plc = { workspace = true }
kerf-pricing = { workspace = true }
kerf-render = { workspace = true }
kerf-rules = { workspace = true }
kerf-sdk = { workspace = true }
kerf-silicon = { workspace = true }
kerf-slicing = { workspace = true }
kerf-structural = { workspace = true }
kerf-systems = { workspace = true }
kerf-tess = { workspace = true }
kerf-textiles = { workspace = true }
kerf-topo = { workspace = true }
kerf-v1 = { workspace = true }
kerf-wiring = { workspace = true }
kerf-woodworking = { workspace = true }
kerf-worker = { workspace = true }
kerf-workers = { workspace = true }
kerf-plm = { workspace = true }

[tool.pytest.ini_options]
# Auto-discover tests from every plugin package and from the legacy backend/
# tree (which still hosts shared tools/ / workers/ / utils/ used by plugins
# until the next migration pass).
testpaths = [
    "packages/kerf-cli/tests",
    "packages/kerf-core/tests",
    "packages/kerf-auth/tests",
    "packages/kerf-api/tests",
    "packages/kerf-chat/tests",
    "packages/kerf-v1/tests",
    "packages/kerf-billing/tests",
    "packages/kerf-cloud/tests",
    "packages/kerf-pricing/tests",
    "packages/kerf-cad-core/tests",
    "packages/kerf-tess/tests",
    "packages/kerf-fem/tests",
    "packages/kerf-cam/tests",
    "packages/kerf-topo/tests",
    "packages/kerf-mates/tests",
    "packages/kerf-bim/tests",
    "packages/kerf-electronics/tests",
    "packages/kerf-imports/tests",
    "packages/kerf-render/tests",
    "packages/kerf-workers/tests",
    "packages/kerf-parts/tests",
    "packages/kerf-partsgen/tests",
    "packages/kerf-worker/tests",
    "packages/kerf-plm/tests",
    "tests/perf",
]
asyncio_mode = "auto"
# importlib mode lets multiple plugin tests/ dirs coexist without conflicting
# package paths.
# Ignore tests for known-broken untracked straggler modules (sysml1d, explicit,
# si_refvalues, tracecurrent_refvalues). They are partial implementations from
# interrupted prior work; the test files remain in the working tree but the
# modules need a focused hardening pass. Drop the corresponding --ignore line
# once each module turns its suite green.
addopts = "--import-mode=importlib"
